--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -98,6 +98,7 @@
 
     <dimen name="component_color_chip_size">32dp</dimen>
     <dimen name="component_color_chip_container_size">33dp</dimen>
+    <dimen name="component_color_chip_size_bg">39dp</dimen>
 
     <dimen name="component_shape_thumb_size">72dp</dimen>
     <dimen name="option_border_width">2dp</dimen>
