--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -16,6 +16,7 @@
      limitations under the License.
 -->
 <resources>
+    <dimen name="bottom_navbar_height">56dp</dimen>
     <dimen name="bottom_navbar_font_text_size">12sp</dimen>
 
     <dimen name="tip_dot_size">8dp</dimen>
